Revert "fix: team section overflow into projects section"
This reverts commit 4f4796a8f552e5afe34cdefa246a1e357594e140.

--- a/css/web3berlin.webflow.css
+++ b/css/web3berlin.webflow.css
@@ -2074,19 +2074,3 @@ figure {
 }
 
 
-
-/* Fix: Team section overflow causing Elke to bleed into Projects */
-.section-team {
-  position: relative;
-  z-index: 1;
-  overflow: hidden;
-}
-
-.section-projects {
-  position: relative;
-  z-index: 2;
-}
-
-._2-column-item-thirds {
-  overflow: hidden;
-}
